--- a/android/hyx/res/layout/login.xml
+++ b/android/hyx/res/layout/login.xml
@@ -25,7 +25,8 @@
             android:layout_height="40dip"
             android:layout_below="@id/tv_zh"
             android:layout_marginLeft="12dip"
-            android:layout_marginRight="10dip" />
+            android:layout_marginRight="10dip"
+            android:hint="帐号" />
 
         <TextView
             android:id="@+id/tv_mima"
