--- a/web/views/user/Login.html
+++ b/web/views/user/Login.html
@@ -3,12 +3,11 @@
 	<head>
 		#parse('pagelet/IndexHeader.html')
 		<style>
-		    #footer 
-		    {
-		    	position:fixed;
-		    	left:0;
-		    	bottom:0;
-		    	width:100%;
+		    #footer {
+				position: fixed;
+				left: 0;
+				bottom: 0;
+				width: 100%;
 		    }
 		</style>
 	</head>
