--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -15,6 +15,12 @@
 				margin-bottom: 0;
 				display: none;
 		    }
+			#img_VerifyCode {
+				border: 1px solid #CCC;
+				width: 100%;
+				height: 50px;
+				cursor: pointer;
+			}
 		</style>
 	</head>
 	<body>
@@ -25,22 +31,25 @@
 		    <div class="row">		    
 				<div class="col-md-3 col-sm-4">
 					<h3>新用户注册</h3>
-					<div id="alert_info" class="alert alert-warning">
+					#*<div id="alert_info" class="alert alert-warning">
 						<button type="button" class="close" data-dismiss="alert">&times;</button>
 						<strong>提示：</strong><span id='alert_msg'>请按要求输入正确的格式内容。</span>
-					</div>
+					</div>*#
 					<form id="regFrm" role="form" onsubmit="return false;">
 						<div class="form-group">
-							<input type="text" id="regFrm_UserName" name="UserName" class="form-control" placeholder="用户名">
+							<input type="text" id="regFrm_UserName" name="UserName" class="form-control" placeholder="电子邮箱">
 						</div>
 						<div class="form-group">
-							<input type="text" id="regFrm_Email" name="Email" class="form-control" placeholder="电子邮箱">
+							<input type="password" id="regFrm_UserPass" name="UserPass" class="form-control" placeholder="登陆密码">
 						</div>
 						<div class="form-group">
-							<input type="password" id="regFrm_UserPass" name="UserPass" class="form-control" placeholder="密码">
+							<input type="password" id="regFrm_UserPass2" class="form-control" placeholder="确认密码">
 						</div>
 						<div class="form-group">
-							<input type="password" id="regFrm_UserPass2" class="form-control" placeholder="密码确认">
+							<input type="text" id="regFrm_VerifyCode" name="VerifyCode" class="form-control" placeholder="验证码">
+						</div>
+						<div class="form-group">
+							<img id='img_VerifyCode' title='点击更换验证码' src='../public/user/verifyCode.jpg'>
 						</div>
                         <button id="btn_reg" type="button" class="btn btn-primary">注册</button>
                         <a class="btn btn-danger" href="login">登陆</a>
@@ -53,50 +62,7 @@
         #parse('pagelet/IndexJs.html')
         <script type="text/javascript">var exports = {};</script>
 		<script type="text/javascript" src="../public/user/regFrm.js" lang='utf-8'></script>
-
 		<!-- Own -->
-		<script type="text/javascript">
-			$(function(){
-
-				$('#btn_reg').click(function(){
-					var formObj = $("#regFrm").serializeObjectForm();
-					var valiResu = valiUserRegFrm(formObj);
-					if(valiResu){
-						if('string' === typeof valiResu){
-							$('#alert_msg').html(valiResu);
-						}else{
-							$('#alert_msg').html(valiResu[0]);
-							$('#regFrm_'+ valiResu[1]).focus();
-						}
-						return;
-					}
-
-					$.ajax({
-						url: '/user/register',
-						type: "POST",
-						dataType: "json",
-						data: {
-							data: JSON.stringify(formObj)
-						}
-					}).done(function(responseText) {
-						var msg, lab;
-						if(responseText.success){
-							location.href = formObj.UserName +'/register/success';
-						}else{
-							msg = responseText.msg;
-							if(msg.message) return $('#alert_msg').html(msg.message);
-
-							if('string' === msg) return $('#alert_msg').html(msg);
-
-							$('#alert_msg').html(msg[0]);
-
-							lab = $('#regFrm_'+ msg[1]);
-							if(lab[0]) lab.focus();
-						}
-					}).complete(function(){
-					});
-				});
-			});
-		</script>
+		<script type="text/javascript" src="../public/user/register.js" lang='utf-8'></script>
 	</body>
 </html>
