--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -16,12 +16,15 @@
 			#img_VerifyCode {
 				border: 1px solid #CCC;
 				width: 100%;
-				height: 50px;
+				height: 35px;
 				cursor: pointer;
 			}
 			@media screen and (max-width: 640px) {
 				form label{
 					display: none;
+				}
+				#lab_changeImg{
+					display: block;
 				}
 			}
 		</style>
@@ -62,9 +65,10 @@
 									</div>
 									<div class="form-group">
 										<label for="regFrm_VerifyCode" class="col-sm-3 control-label">验证码</label>
-										<div class="col-sm-9">
+										<div class="col-sm-4">
 											<input type="text" class="form-control" id="regFrm_VerifyCode" name="VerifyCode" placeholder="验证码">
 										</div>
+										<label id="lab_changeImg" class="col-sm-5 control-label">看不清？<a href="javascript:;">换张图</a></label>
 									</div>
 									<div class="form-group">
 										<div class="col-sm-offset-3 col-sm-9">
@@ -75,6 +79,15 @@
 										<div class="col-sm-offset-3 col-sm-9">
 											<button id="btn_reg" type="button" class="btn btn-primary">注册</button>
 											<a class="btn btn-danger" href="login">登陆</a>
+										</div>
+									</div>
+									<div class="form-group">
+										<div class="col-sm-offset-3 col-sm-9">
+											<div class="checkbox">
+												<label>
+													<input type="checkbox" checked> 我已阅读并同意《条款》
+												</label>
+											</div>
 										</div>
 									</div>
 								</form>
