--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -13,6 +13,10 @@
 				font-weight: normal;
 				margin-bottom: 0;
 		    }
+		    .wrong{
+				color: red;
+				margin-top: -15px;
+		    }
 			#img_VerifyCode {
 				border: 1px solid #CCC;
 				width: 100%;
@@ -52,6 +56,9 @@
 										</div>
 									</div>
 									<div class="form-group">
+										<div class="col-sm-offset-3 col-sm-9 wrong">电子邮箱不能为空</div>
+									</div>
+									<div class="form-group">
 										<label for="regFrm_UserPass" class="col-sm-3 control-label">登陆密码</label>
 										<div class="col-sm-9">
 											<input type="password" class="form-control" id="regFrm_UserPass" name="UserPass" placeholder="登陆密码">
@@ -85,7 +92,7 @@
 										<div class="col-sm-offset-3 col-sm-9">
 											<div class="checkbox">
 												<label>
-													<input type="checkbox" checked> 我已阅读并同意《条款》
+													<input type="checkbox" checked> 我已阅读并同意《用户注册条款》
 												</label>
 											</div>
 										</div>
