--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -13,6 +13,10 @@
 				font-weight: normal;
 				margin-bottom: 0;
 		    }
+		    .a {
+		    	color: #1A66B3;
+		    	font-size: 12px;		    	
+		    }
 		    .wrong{
 				color: red;
 				margin-top: -15px;
@@ -75,7 +79,10 @@
 										<div class="col-sm-4">
 											<input type="text" class="form-control" id="regFrm_VerifyCode" name="VerifyCode" placeholder="验证码">
 										</div>
-										<label id="lab_changeImg" class="col-sm-5 control-label">看不清？<a href="javascript:;">换张图</a></label>
+										<label id="lab_changeImg" class="col-sm-5 control-label">看不清？<a class="a" href="javascript:;">换张图</a></label>
+									</div>
+									<div class="form-group">
+										<div class="col-sm-offset-3 col-sm-9 wrong">验证码不能为空</div>
 									</div>
 									<div class="form-group">
 										<div class="col-sm-offset-3 col-sm-9">
@@ -92,7 +99,7 @@
 										<div class="col-sm-offset-3 col-sm-9">
 											<div class="checkbox">
 												<label>
-													<input type="checkbox" checked> 我已阅读并同意《用户注册条款》
+													<input type="checkbox" checked> 我已阅读并同意《<a class="a" href='#'>用户注册条款</a>》
 												</label>
 											</div>
 										</div>
