--- a/web/views/user/Login.html
+++ b/web/views/user/Login.html
@@ -33,7 +33,7 @@
                             </label>
                         </div>
                         <button id="btn_login" type="button" class="btn btn-primary">登陆</button>
-                        <a class="btn btn-danger" href="register">注册</a>
+                        <a class="btn btn-danger" href="register?redirectURL=${refererUrl}">注册</a>
                     </form>                
                 </div>
 		    </div>
