--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -92,7 +92,7 @@
 									<div class="form-group">
 										<div class="col-sm-offset-3 col-sm-9">
 											<button id="btn_reg" type="button" class="btn btn-primary">注册</button>
-											<a class="btn btn-danger" href="login">登陆</a>
+											<a class="btn btn-default" href="login">登陆</a>
 										</div>
 									</div>
 									<div class="form-group">
