--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -2,40 +2,7 @@
 <html lang="zh-CN">
 	<head>
 		#parse('pagelet/IndexHeader.html')
-		<style>
-			#footer{
-				position:fixed;
-				left:0;
-				bottom:0;
-				width:100%;
-			}
-			form label{
-				font-weight: normal;
-				margin-bottom: 0;
-		    }
-		    .a {
-		    	color: #1A66B3;
-		    	font-size: 12px;		    	
-		    }
-		    .wrong{
-				color: red;
-				margin-top: -15px;
-		    }
-			#img_VerifyCode {
-				border: 1px solid #CCC;
-				width: 100%;
-				height: 35px;
-				cursor: pointer;
-			}
-			@media screen and (max-width: 640px) {
-				form label{
-					display: none;
-				}
-				#lab_changeImg{
-					display: block;
-				}
-			}
-		</style>
+		<link rel="stylesheet" type="text/css" href="${virtualPath}public/user/register.css?v1" media="screen">
 	</head>
 	<body>
 		#parse('pagelet/TopBanner.html')
@@ -52,15 +19,15 @@
 									<button type="button" class="close" data-dismiss="alert">&times;</button>
 									<strong>提示：</strong><span id='alert_msg'>请按要求输入正确的格式内容。</span>
 								</div>*#
-								<form class="form-horizontal" role="form" id="regFrm" onsubmit="return false;">
+								<form class="form-horizontal" role="form" id="regFrm" onsubmit="return false;" data-url="">
 									<div class="form-group">
 										<label for="regFrm_UserName" class="col-sm-3 control-label">电子邮箱</label>
 										<div class="col-sm-9">
 											<input type="email" class="form-control" id="regFrm_UserName" name="UserName" placeholder="电子邮箱">
 										</div>
 									</div>
-									<div class="form-group">
-										<div class="col-sm-offset-3 col-sm-9 wrong">电子邮箱不能为空</div>
+									<div class="form-group wrong">
+										<label id="regFrm_UserName_Vali" class="col-sm-offset-3 col-sm-9"></label>
 									</div>
 									<div class="form-group">
 										<label for="regFrm_UserPass" class="col-sm-3 control-label">登陆密码</label>
@@ -68,31 +35,37 @@
 											<input type="password" class="form-control" id="regFrm_UserPass" name="UserPass" placeholder="登陆密码">
 										</div>
 									</div>
+									<div class="form-group wrong">
+										<label id="regFrm_UserPass_Vali" class="col-sm-offset-3 col-sm-9"></label>
+									</div>
 									<div class="form-group">
 										<label for="regFrm_UserPass2" class="col-sm-3 control-label">确认密码</label>
 										<div class="col-sm-9">
 											<input type="password" class="form-control" id="regFrm_UserPass2" name="UserPass2" placeholder="确认密码">
 										</div>
 									</div>
+									<div class="form-group wrong">
+										<label id="regFrm_UserPass2_Vali" class="col-sm-offset-3 col-sm-9"></label>
+									</div>
 									<div class="form-group">
 										<label for="regFrm_VerifyCode" class="col-sm-3 control-label">验证码</label>
 										<div class="col-sm-4">
 											<input type="text" class="form-control" id="regFrm_VerifyCode" name="VerifyCode" placeholder="验证码">
 										</div>
-										<label id="lab_changeImg" class="col-sm-5 control-label">看不清？<a class="a" href="javascript:;">换张图</a></label>
+										<label id="lab_changeImg" class="col-sm-5 control-label">看不清？<a class="a" href="javascript:showVerifyCode();">换张图</a></label>
 									</div>
-									<div class="form-group">
-										<div class="col-sm-offset-3 col-sm-9 wrong">验证码不能为空</div>
+									<div class="form-group wrong">
+										<label id="regFrm_VerifyCode_Vali" class="col-sm-offset-3 col-sm-9"></label>
 									</div>
 									<div class="form-group">
 										<div class="col-sm-offset-3 col-sm-9">
-											<img id='img_VerifyCode' title='点击更换验证码' src='../public/user/verifyCode.jpg'>
+											<img id='img_VerifyCode' title='点击更换验证码' src=''>
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="col-sm-offset-3 col-sm-9">
 											<button id="btn_reg" type="button" class="btn btn-primary">注册</button>
-											<a class="btn btn-default" href="login">登陆</a>
+											<a class="btn btn-danger" href="login">登陆</a>
 										</div>
 									</div>
 									<div class="form-group">
