--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -88,8 +88,8 @@
         #parse('pagelet/IndexFooter.html')
         #parse('pagelet/IndexJs.html')
         <script type="text/javascript">var exports = {};</script>
-		<script type="text/javascript" src="../public/user/regFrm.js" lang='utf-8'></script>
+		<script type="text/javascript" src="../public/user/regFrm.min.js" lang='utf-8'></script>
 		<!-- Own -->
-		<script type="text/javascript" src="../public/user/register.js" lang='utf-8'></script>
+		<script type="text/javascript" src="../public/user/register.min.js" lang='utf-8'></script>
 	</body>
 </html>
