--- a/web/public/user/register.less
+++ b/web/public/user/register.less
@@ -9,7 +9,7 @@ form {
 		font-weight: normal;
 		margin-bottom: 0;
 	}
-	.a {
+	a {
 		color: #1A66B3;
 		&:hover {
 			text-decoration: underline;
@@ -25,6 +25,16 @@ form {
 		width: 100%;
 		height: 35px;
 		cursor: pointer;
+	}
+}
+#reg_tip {
+	a {
+		color: #1A66B3;
+		text-decoration: underline;
+	}
+	ol {
+		padding-left: 22px;
+		font-size: 12px;
 	}
 }
 @media screen and (max-width: 640px) {
