--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -64,8 +64,8 @@
 									</div>
 									<div class="form-group">
 										<div class="col-sm-offset-3 col-sm-9">
-											<button id="btn_reg" type="submit" class="btn btn-primary">注册</button>
-											<a class="btn btn-danger" href="login">登陆</a>
+											<button id="btn_reg" type="submit" class="btn btn-primary">立即注册</button>
+											#*<a class="btn btn-danger" href="login">登陆</a>*#
 										</div>
 									</div>
 									<div class="form-group">
@@ -79,6 +79,15 @@
 									</div>
 								</form>
 			                </div>
+							<div id="reg_tip" class="col-md-offset-3 col-sm-offset-3 col-md-5 col-sm-4">
+								<div>已有帐户？<a href="login">直接登陆</a></div>
+								<div>&nbsp;</div>
+								<div><b>为什么总提示验证码错误？</b></div>
+								<ol>
+									<li>首先请确定浏览器已经启用Cookie。</li>
+									<li>实在不行，邮件给我 3203317 AT qq.com。</li>
+								</ol>
+							</div>
 						</div>
 					</div>
 				</div>
