--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -19,7 +19,7 @@
 									<button type="button" class="close" data-dismiss="alert">&times;</button>
 									<strong>提示：</strong><span id='alert_msg'>请按要求输入正确的格式内容。</span>
 								</div>*#
-								<form class="form-horizontal" role="form" id="regFrm" onsubmit="subFrm();return false;" data-url="register">
+								<form class="form-horizontal" role="form" id="regFrm" onsubmit="return false;" data-url="register">
 									<div class="form-group">
 										<label for="regFrm_UserName" class="col-sm-3 control-label">电子邮箱</label>
 										<div class="col-sm-9">
@@ -64,7 +64,7 @@
 									</div>
 									<div class="form-group">
 										<div class="col-sm-offset-3 col-sm-9">
-											<button id="btn_reg" type="submit" class="btn btn-primary">立即注册</button>
+											<button id="btn_reg" type="button" class="btn btn-primary">立即注册</button>
 											#*<a class="btn btn-danger" href="login">登陆</a>*#
 										</div>
 									</div>
