--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -80,7 +80,7 @@
 								</form>
 			                </div>
 							<div id="reg_tip" class="col-md-offset-3 col-sm-offset-3 col-md-5 col-sm-4">
-								<div>已有帐户？<a href="login">直接登陆</a></div>
+								<div>已有帐号？<a href="login">直接登陆</a></div>
 								<div>&nbsp;</div>
 								<div><b>为什么总提示验证码错误？</b></div>
 								<ol>
