--- a/web/views/user/Login.html
+++ b/web/views/user/Login.html
@@ -69,7 +69,7 @@
 									</div>
 								</form>
 			                </div>
-							<div id="reg_tip" class="col-md-offset-3 col-sm-offset-3 col-md-5 col-sm-4">
+							<div id="login_tip" class="col-md-offset-3 col-sm-offset-3 col-md-5 col-sm-4">
 								<div>没有帐号？<a href="register?redirectURL=${refererUrl}">注册新会员</a></div>
 								<div>&nbsp;</div>
 								<div><b>为什么总提示验证码错误？</b></div>
