--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -21,13 +21,13 @@
 								</div>*#
 								<form class="form-horizontal" role="form" id="regFrm" onsubmit="return false;" data-url="register">
 									<div class="form-group">
-										<label for="regFrm_UserName" class="col-sm-3 control-label">电子邮箱</label>
+										<label for="regFrm_Email" class="col-sm-3 control-label">电子邮箱</label>
 										<div class="col-sm-9">
-											<input type="text" class="form-control" id="regFrm_UserName" name="UserName" placeholder="电子邮箱">
+											<input type="text" class="form-control" id="regFrm_Email" name="Email" placeholder="电子邮箱">
 										</div>
 									</div>
 									<div class="form-group wrong">
-										<label id="regFrm_UserName_Vali" class="col-sm-offset-3 col-sm-9"></label>
+										<label id="regFrm_Email_Vali" class="col-sm-offset-3 col-sm-9"></label>
 									</div>
 									<div class="form-group">
 										<label for="regFrm_UserPass" class="col-sm-3 control-label">登陆密码</label>
