--- a/web/views/user/SendRegEmail.email.html
+++ b/web/views/user/SendRegEmail.email.html
@@ -1,6 +1,6 @@
 亲爱的找呗用户，
 <p></p>
-您好！您的绑定验证地址是：<a href='http://localhost:3000/user/$user.UserName/ackRegEmail/$ackCode'>http://www.zhaobe.com/user/$user.UserName/ackRegEmail/$ackCode</a><br/>
+您好！您的绑定验证地址是：<a href='http://localhost:3000/user/$user.Email/ackRegEmail/$ackCode'>http://www.zhaobe.com/user/$user.Email/ackRegEmail/$ackCode</a><br/>
 本邮件是系统自动发送的，请勿直接回复！感谢您的访问，祝您使用愉快！
 <p></p>
 找呗科技<br/>
