--- a/web/views/user/SendRegEmail_Success.html
+++ b/web/views/user/SendRegEmail_Success.html
@@ -22,7 +22,7 @@
 		    <div class="row">		    
                 <div class="col-md-12 col-sm-12">
 					<h3>注册成功</h3>
-					<h5>恭喜您：$user.UserName，激活邮件已发送到您的邮箱，请进行激活操作，如果没有收到邮件，请点击<a href='/user/$user.UserName/register/sendRegEmail' style='text-decoration: underline'>重新发送</a>。</h5>
+					<h5>恭喜您：$user.Email，激活邮件已发送到您的邮箱，请进行激活操作，如果没有收到邮件，请点击<a href='/user/$user.Email/register/sendRegEmail' style='text-decoration: underline'>重新发送</a>。</h5>
                 </div>
 		    </div>
 		</section>
