--- a/web/views/user/SendRegEmail.email.html
+++ b/web/views/user/SendRegEmail.email.html
@@ -3,5 +3,5 @@
 您好！您的绑定验证地址是：<a href='http://localhost:3000/user/$user.Email/ackRegEmail/$ackCode'>http://www.zhaobe.com/user/$user.Email/ackRegEmail/$ackCode</a><br/>
 本邮件是系统自动发送的，请勿直接回复！感谢您的访问，祝您使用愉快！
 <p></p>
-找呗科技<br/>
+找呗社区<br/>
 <a href='www.zhaobe.com'>www.zhaobe.com</a>
