--- a/web/views/user/SendRegEmail_Success.html
+++ b/web/views/user/SendRegEmail_Success.html
@@ -31,7 +31,7 @@
 											<ol style="padding-left:20px;margin-top:-15px;">
 												<li>请确认是否填写正确的邮箱地址：<strong style='text-decoration: underline'>$user.Email</strong>。</li>
 												<li>请注意查看您邮箱中的垃圾邮件，可能 <b>zhaobe</b> 的邮件被误杀了。</li>
-												<li>如果还没有收到邮件，请点击重新<a href='/user/$user.Email/register/sendRegEmail'>发送激活邮件</a>。</li>
+												<li>如果还没有收到邮件，请点击 <a href='/user/$user.Email/register/activate'>这里</a> 重新激活帐号。</li>
 											</ol>
 										</label>
 									</div>
