--- a/web/views/user/Register_Activate.html
+++ b/web/views/user/Register_Activate.html
@@ -62,7 +62,7 @@
 						<div class="panel-heading"><b>激活帐号</b></div>
 						<div class="panel-body">
 							<div class="col-md-4 col-sm-5">
-								<form class="form-horizontal" role="form" id="regFrm" onsubmit="return false;" data-url="register">
+								<form class="form-horizontal" role="form" id="regFrm" onsubmit="return false;" data-url="activate">
 									<div class="form-group">
 										<label class="col-sm-12" style='font-size:12px;color:#c00'>请输入您注册的邮箱地址，系统将发送激活账号的链接到邮箱中</label>
 									</div>
