--- a/web/public/user/register.less
+++ b/web/public/user/register.less
@@ -11,7 +11,8 @@ form {
 	}
 	a {
 		color: #1A66B3;
-		&:hover {
+		text-decoration: underline;
+		&:hover{
 			text-decoration: underline;
 		}
 	}
@@ -33,7 +34,7 @@ form {
 		text-decoration: underline;
 	}
 	ol {
-		padding-left: 22px;
+		padding-left: 20px;
 		font-size: 12px;
 	}
 }
