--- a/web/views/user/Register.html
+++ b/web/views/user/Register.html
@@ -52,7 +52,7 @@
 										<div class="col-sm-4">
 											<input type="text" class="form-control" id="regFrm_VerifyCode" name="VerifyCode" placeholder="验证码">
 										</div>
-										<label id="lab_changeImg" class="col-sm-5 control-label">看不清？<a class="a" href="javascript:showVerifyCode();">换张图</a></label>
+										<label id="lab_changeImg" class="col-sm-5 control-label">看不清？<a href="javascript:showVerifyCode();">换张图</a></label>
 									</div>
 									<div class="form-group wrong">
 										<label id="regFrm_VerifyCode_Vali" class="col-sm-offset-3 col-sm-9"></label>
@@ -72,7 +72,7 @@
 										<div class="col-sm-offset-3 col-sm-9">
 											<div class="checkbox">
 												<label>
-													<input type="checkbox" checked> 我已阅读并同意《<a class="a" href='#'>用户注册条款</a>》
+													<input type="checkbox" checked> 我已阅读并同意《<a href='#'>用户注册条款</a>》
 												</label>
 											</div>
 										</div>
