--- a/web/views/user/Login.html
+++ b/web/views/user/Login.html
@@ -87,7 +87,7 @@
 										<div class="col-sm-4">
 											<input type="text" class="form-control" id="logFrm_VerifyCode" name="VerifyCode" placeholder="验证码">
 										</div>
-										<label id="lab_changeImg" class="col-sm-5 control-label">看不清？<a class="a" href="javascript:showVerifyCode();">换张图</a></label>
+										<label id="lab_changeImg" class="col-sm-5 control-label">看不清？<a href="javascript:showVerifyCode();">换张图</a></label>
 									</div>
 									<div class="form-group wrong">
 										<label id="logFrm_VerifyCode_Vali" class="col-sm-offset-3 col-sm-9"></label>
@@ -107,9 +107,10 @@
 										</div>
 									</div>
 									<div class="form-group">
-										<div class="col-sm-offset-3 col-sm-9">
+										<div class="col-sm-offset-3 col-sm-4">
 											<button id="btn_log" type="button" class="btn btn-primary">立即登陆</button>
 										</div>
+										<label class="col-sm-5 control-label"><a href="/user/reset/password">忘记登陆密码？</a></label>
 									</div>
 								</form>
 			                </div>
