--- a/web/views/user/Login.html
+++ b/web/views/user/Login.html
@@ -67,7 +67,7 @@
 									<div class="form-group">
 										<label for="logFrm_Email" class="col-sm-3 control-label">电子邮箱</label>
 										<div class="col-sm-9">
-											<input type="text" class="form-control" id="logFrm_Email" name="Email" placeholder="电子邮箱" required autofocus data-original-title='电子邮箱不能为空。'>
+											<input type="text" class="form-control" id="logFrm_Email" name="Email" placeholder="电子邮箱" required data-original-title='电子邮箱不能为空。'>
 										</div>
 									</div>
 									<div class="form-group wrong">
@@ -76,7 +76,7 @@
 									<div class="form-group">
 										<label for="logFrm_UserPass" class="col-sm-3 control-label">登陆密码</label>
 										<div class="col-sm-9">
-											<input type="password" class="form-control" id="logFrm_UserPass" name="UserPass" placeholder="登陆密码" required autofocus data-original-title='登陆密码不能为空。'>
+											<input type="password" class="form-control" id="logFrm_UserPass" name="UserPass" placeholder="登陆密码" required data-original-title='登陆密码不能为空。'>
 										</div>
 									</div>
 									<div class="form-group wrong">
@@ -85,7 +85,7 @@
 									<div class="form-group">
 										<label for="logFrm_VerifyCode" class="col-sm-3 control-label">验证码</label>
 										<div class="col-sm-4">
-											<input type="text" class="form-control" id="logFrm_VerifyCode" name="VerifyCode" placeholder="验证码" required autofocus data-original-title='验证码不能为空。'>
+											<input type="text" class="form-control" id="logFrm_VerifyCode" name="VerifyCode" placeholder="验证码" required data-original-title='验证码不能为空。'>
 										</div>
 										<label id="lab_changeImg" class="col-sm-5 control-label">看不清？<a href="javascript:showVerifyCode();">换张图</a></label>
 									</div>
